# reasoning_hydra_ros

./: .gitignore  README.md
hydra_msgs/: CMakeLists.txt  package.xml
hydra_msgs/msg/: ActiveObjectRelationships.msg  Detections3D.msg  LabeledRelationships.msg  Navigation.msg  NavigationPath.msg  ObjectSearch.msg  ObjectSearchPair.msg  VisualRelationshipsEncodings.msg
hydra_msgs/srv/: GetNavigation.srv  Load.srv  VLMRelationship.srv
hydra_ros/: CMakeLists.txt  package.xml
hydra_ros/cfg/: LayerVisualizer.cfg  Navigation.cfg
hydra_ros/config/: d455.yaml  d455_recorded.yaml  gvd_places_sinks.yaml  visualizer_plugins.yaml
hydra_ros/config/color/: 3rscan.csv  ade20k_indoor.csv  ade20k_mit.csv  ade20k_outdoor.csv  phoenix.csv  uhumans2_apartment.csv  uhumans2_office.csv  uhumans2_subway.csv
hydra_ros/config/datasets/: eagle.yaml
hydra_ros/config/hydra_visualizer/: buildings_layer.yaml  objects_layer.yaml  outdoor_places_layer.yaml  places_layer.yaml  rooms_layer.yaml  visualizer.yaml
hydra_ros/config/object_visualizer/: buildings_layer.yaml  objects_layer.yaml  places_layer.yaml  rooms_layer.yaml  visualizer.yaml
hydra_ros/include/hydra_ros/: hydra_ros_pipeline.h  hydra_vis_pipeline.h
hydra_ros/launch/: hydra.launch  hydra_vis.launch  robot.launch
hydra_ros/launch/datasets/: 3rscan.launch  hm3dsem.launch  publish_3rscan.launch  publish_hm3dsem.launch  publish_replica.launch  replica.launch  uhumans2.launch
hydra_ros/launch/static_tfs/: robot_record_tfs.xml
hydra_ros/launch/utils/: 3rscan_all_scenes.launch  dsg_optimizer.launch
hydra_ros/launch/visualizer/: hydra_streaming_visualizer.launch  hydra_vis_streaming_visualizer.launch  hydra_visualizer.launch
hydra_ros/rviz/: 3rscan.rviz  anymal.rviz  hm3dsem.rviz  replica.rviz  robot_record.rviz  uhumans2.rviz
hydra_ros/scripts/: 3rscan_tsdf.py  add_uncompressed_image_to_bag.py  colorize_cloud_rmf.py  copy_static_tfs.py  d455_project.py  d455_project_postprocessed.py  prep_sparkal_dataset.py  publish_3RScan.py  publish_hm3dsem.py  publish_replica.py  publish_rgbpcl.py  run_all_3rscan_scenes.py  subscribe_and_save.py  subscribe_compressedimage_save_video.py  subscribe_image_save_video.py  sync_and_uncompress.py  tsdf.py  tsdf_rtabmap.py
hydra_ros/src/: hydra_ros_pipeline.cpp  hydra_vis_pipeline.cpp
hydra_ros/src/backend/: ros_backend.cpp  ros_backend_publisher.cpp  ros_vlm_relationships.cpp
hydra_ui/: CMakeLists.txt  package.xml  plugin_description.xml
hydra_ui/src/: hydra_ui.cpp  hydra_ui.h
(+69 files in other folders)
