<?xml version="1.0"?>
<package format="2">
  <name>hydra_msgs</name>
  <version>0.0.1</version>
  <description>Messages used for hydra</description>

  <author email="na26933@mit.edu">Nathan Hughes</author>
  <author email="albert.g.puigjaner@ntnu.no">Albert Gassol Puigjaner</author>
  <maintainer email="albert.g.puigjaner@ntnu.no">Albert Gassol Puigjaner</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>std_msgs</depend>
  <depend>semantic_inference_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>visualization_msgs</depend>

  <export>
  </export>

</package>
