<package>
  <name>hydra_ui</name>
  <version>0.0.1</version>
  <description> hydra_ui </description>
  <maintainer email="albert.g.puigjaner@ntnu.no">Albert Gassol</maintainer>
  <license>BSD</license>

  <author></author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>qtbase5-dev</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>semantic_inference_msgs</build_depend>

  <run_depend>libqt5-core</run_depend>
  <run_depend>libqt5-gui</run_depend>
  <run_depend>libqt5-widgets</run_depend>
  <run_depend>rviz</run_depend>

  <export>
      <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
